# workflow

./: .env  .gitignore  .pre-commit-config.yaml  README.md  README_ELASTICSEARCH_LOGGING.md  TODO  alembic.ini  docker-compose.yml  example_workflow.py  index.html  main.py  package-lock.json  package.json  pyproject.toml  run_tests.py  vite.config.ts
alembic/: env.py
alembic/versions/: 0db0b9cfb4f5_add_source_and_target_properties_to_.py  52e9be1c1c00_remove_properties_column_from_edges_.py  63fe39cad050_test_migration.py  b34c8fa0b414_initial_migration.py
backend/: .dockerignore  ALEMBIC_GUIDE.md  Dockerfile  TODO  pyproject.toml  run_tests.py
backend/diagrams/: domain.puml  langflow.mmd
backend/routers/: README.md
backend/setting/: README.md
database/: README.md  setup.py
database/graph/: __init__.py  edge.py  graph.py  vertex.py
diagrams/: domain.puml
dto/: README.md
dto/graph/: edge_dto.py  graph_dto.py  vertex_dto.py
dto/log/: log_dto.py
dto/workflow/: node_dto.py  workflow_dto.py
etc/: langflow_node_export_example.json
helpers/: __init__.py
helpers/engine/: workflow_engine.py
helpers/node/: __init__.py  factory.py  node_base.py  node_type.py
helpers/utils/: dependencies.py  req_res_examples.py
helpers/websockets/: README.md  WEBSOCKET_IMPLEMENTATION_SUMMARY.md  (+3 more)
repositories/: README.md
scripts/: DB_MIGRATION_GUIDE.md  README.md  db_migrate.sh  db_reset.sh  db_sync.sh
service/: README.md
services/: README.md
setting/: config.py  logger.py
src/: App.tsx  index.css  main.tsx
tests/: README.md  test_workflow_router.py
(+70 files in other folders)
